--- a/src/App.css
+++ b/src/App.css
@@ -88,3 +88,51 @@ body {
   color: white; 
   background: rgb(43, 47, 60);
 }
+
+/* ---signup & login---- */
+
+.login-page {
+  width: 100vw; 
+  height: 100vh;
+  padding-top: 6vw;
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 18%, rgba(16,16,83,1) 35%, rgba(9,14,63,1) 10%,.8 );
+   }
+      .card {
+         width: 200px; 
+         position: relative; 
+         left: calc(50vw - 100px); 
+         text-align: center; 
+        }
+      .title { 
+        padding-top: 32px; 
+        font-size: 22px; 
+        color:rgba(184, 177, 177, 0.9); 
+        font-weight: 700; 
+      }
+      input { 
+        width: calc(100% - 16px); 
+        margin-top: 12px; padding: 8px; 
+        background-color: #06222f; 
+        color: #e8e8e8;
+        outline: none; 
+        border-radius: 5px;
+        border: 0px solid #e6f7ff; 
+      }
+      button { 
+        margin-top: 12px; 
+        width: 100%; 
+        padding: 8px; 
+        font-weight: 500;
+        background-color: #afafaf;
+        transition-duration: 0.3s;
+        transform-style: preserve-3d;
+        font-family:sans-serif;
+        border: 0px;
+        border-radius: 15px;
+      }
+
+      .but:hover{
+        background-color: #0547a3;
+        color: #e6f7ff;
+      }
